# icfpc2006

./: README.md
code/: Makefile
code/automate/: 01_decrypt.py  02_guest.py  03_crack_passwords.py  04_users.py  05_adventure.py  activate  setup.sh
code/qbasic/: hack.bas
code/src/: CMakeLists.txt  commands.cpp  debugger.cpp  disassembler.cpp  loader.cpp  main_dum.cpp  main_udb.cpp  main_vm.cpp  memory_manager.cpp  opcodes.hpp  operation.cpp  snapshot.cpp  types.hpp  unity.cpp  vm.cpp
notes/: .gitignore  dictionary.txt  pubs.txt
notes/drive/home/ftd/: README  TODO
notes/drive/home/guest/: mail.txt
notes/drive/home/hmonk/: README  advise
notes/drive/home/howie/: README  adventure
notes/drive/home/ohmega/: 2d  README  aspects.spec  mail.txt  plus.2d  raytrace.spec  reverse.spec  verify
spec/: task.shtml
spec/source/: code.shtml
